--- a/index.html
+++ b/index.html
@@ -87,19 +87,15 @@
             </div>
             <div class="stockPile">
                 <div class="cardBoxpile">
-                    <!-- <img class="card" src="images/cardBack.png" alt="Back of playing card">
-                    <img class="card added pile" src="images/cardBack.png" alt="Back of playing card">
-                    <img class="card added pile invis" src="images/cardBack.png" alt="Back of playing card"> -->
-
                 </div>
                 <div class="cardBoxplay">
-
                 </div>
             </div>
         </div>
         <footer class="stickyFooter">
             <div class="score">
-                Score: <span id="scoreSpan"></span>
+                <div>Score: <span id="scoreSpan"></span></div>
+                <div>Streak: <span id="scoreStreakSpan"></span></div>
             </div>
         </footer>
     </div>
