--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
 
                 <div class="loginBox">
                     <div>
-                        <label>Username: <input type="text"></label><br>
-                        <label>Password: &nbsp<input type="password"></label><br>
+                        <label>Username: <input id="username" type="text"></label><br>
+                        <label>Password: &nbsp<input id="password" type="password"></label><br>
                     </div>
-                    <div class="loginButton">Login</div>
+                    <div id="login" class="loginButton">Login</div>
                 </div>
 
             </div>
